fix for scrollbar on some configurations

--- a/app/assets/css/parts/_controls.scss
+++ b/app/assets/css/parts/_controls.scss
@@ -15,7 +15,7 @@ header {
 
 .domain-switch {
   border-bottom: 1px solid darken($header-bg, 5%);
-  padding: 10px 5px;
+  padding: .5em;
 
   .btn.btn.btn {
     color: $controls-btn-color;
